@@ -167,7 +167,7 @@ checkEnvSubstituteConfig()
 
 	if [[ ${BW_JAVA_OPTS} ]]; then
 		if [ -e ${bwappnodeTRA} ]; then
-			sed -i.bak "/java.extended.properties/s/$/ ${BW_JAVA_OPTS}/" $bwappnodeTRA
+			sed -i.bak "/java.extended.properties/s/$/ ${BW_JAVA_OPTS}/" $bwappnodeTRA 2> /dev/null
 			print_Debug "Appended $BW_JAVA_OPTS to java.extend.properties"
 		fi
 	fi
@@ -362,7 +362,7 @@ checkJAVAHOME()
 	if [[ ${JAVA_HOME}  ]]; then
 		print_Debug $JAVA_HOME
 	else
-		export JAVA_HOME=$BWCE_HOME/tibco.home/tibcojre64/1.8.0
+		export JAVA_HOME=$BWCE_HOME/tibco.home/tibcojre64/11
 	fi
 }
 
@@ -469,15 +469,17 @@ then
 		ln -s /*.ear `echo $BWCE_HOME/tibco.home/bw*/*/bin`/bwapp.ear
 		sed -i.bak "s#_APPDIR_#$BWCE_HOME#g" $BWCE_HOME/tibco.home/bw*/*/config/appnode_config.ini
 		unzip -qq `echo $BWCE_HOME/tibco.home/bw*/*/bin/bwapp.ear` -d /tmp
+		export BW_JAVA_OPTS=$BW_JAVA_OPTS' --add-opens java.management/sun.management=ALL-UNNAMED '
 		setLogLevel
 		memoryCalculator	
-		checkEnvSubstituteConfig
 		checkAnalyzerConfig
 		checkBWProfileEncryptionConfig	
 	fi
 fi
 
 if [ $TCI_BW_EDITION != "ipaas" ]; then
+	export BW_JAVA_OPTS=$BW_JAVA_OPTS' --add-opens java.management/sun.management=ALL-UNNAMED '
+	checkEnvSubstituteConfig
 	checkProfile	
 	checkPolicy
 	setupThirdPartyInstallationEnvironment
